# leetcode_daily

./: .gdbinit  .gitignore  CMakeLists.txt
extra_characters_in_string/: CMakeLists.txt
extra_characters_in_string/src/: main.c  minExtraChar.c
include/: leetcode_daily.h
k_smallest_lexical_order/: CMakeLists.txt
k_smallest_lexical_order/src/: findKthNumber.c  main.c
lexicographical_numbers/: CMakeLists.txt
lexicographical_numbers/src/: lexicalOrder.c  main.c
longest_common_prefix/: CMakeLists.txt
longest_common_prefix/src/: longestCommonPrefix.c  longestCommonPrefix.c.bak  main.c
sum_of_prefix_scores/: CMakeLists.txt
sum_of_prefix_scores/src/: main.c  sumPrefixScores.c
two_sum/: CMakeLists.txt
two_sum/src/: main.c  twoSum.c
